Rebuild complete JANUS Android product from native foundations